# polyrust

./: .dockerignore  .env.example  .gitignore  .sops.yaml  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  config.example.toml  config.toml  docker-compose.local.yml  docker-compose.yml  spot.yml
.github/workflows/: docker.yml
analysis/: market_correlation.ipynb  pyproject.toml
analysis/output/: bet_trajectories.parquet  market_summary.csv  market_windows.parquet  report_ru.md  sweep_calibration_report.md
config/: default.toml
crates/polyrust-backtest/: Cargo.toml
crates/polyrust-backtest/src/: config.rs  error.rs  lib.rs  progress.rs
crates/polyrust-backtest/src/data/: clob_fetcher.rs  fetcher.rs  gamma_fetcher.rs  mod.rs  store.rs  subgraph_fetcher.rs
crates/polyrust-backtest/src/engine/: mod.rs
crates/polyrust-backtest/src/report/: mod.rs
crates/polyrust-backtest/src/sweep/: config.rs  grid.rs  mod.rs  report.rs  runner.rs
crates/polyrust-backtest/tests/: integration_test.rs
crates/polyrust-core/: Cargo.toml
crates/polyrust-core/src/: actions.rs  claim_monitor.rs  config.rs  context.rs  dashboard_view.rs  engine.rs  error.rs  event_bus.rs  events.rs  execution.rs  fees.rs  lib.rs  price_service.rs  strategy.rs  types.rs
crates/polyrust-core/tests/: dashboard_view_test.rs  engine_test.rs  event_bus_test.rs  types_test.rs
crates/polyrust-dashboard/: Cargo.toml
crates/polyrust-dashboard/src/: fmt.rs  handlers.rs  lib.rs  server.rs
crates/polyrust-dashboard/templates/: base.html  health.html  index.html  positions.html  strategy_view.html  trades.html
crates/polyrust-dashboard/templates/partials/: pnl_summary.html  position_row.html  strategy_content.html
crates/polyrust-dashboard/tests/: routes_test.rs
crates/polyrust-execution/: Cargo.toml
crates/polyrust-execution/src/: ctf_redeemer.rs  lib.rs  live.rs  paper.rs  relayer.rs  rounding.rs
crates/polyrust-market/: Cargo.toml
crates/polyrust-market/src/: binance_feed.rs  chainlink_client.rs  clob_feed.rs  coinbase_feed.rs  discovery_feed.rs  feed.rs  lib.rs  orderbook.rs  price_feed.rs
crates/polyrust-store/: Cargo.toml
crates/polyrust-store/src/: db.rs  error.rs  events.rs  lib.rs  orders.rs  parsing.rs  snapshots.rs  trades.rs
crates/polyrust-store/tests/: store_test.rs
crates/polyrust-strategies/: Cargo.toml
crates/polyrust-strategies/src/: crypto_arb.rs  lib.rs  shared.rs
crates/polyrust-strategies/src/crypto_arb/: base.rs  config.rs  confirmed.rs  crosscorr.rs  dashboard.rs  mod.rs  runtime.rs  tailend.rs  tests.rs  twosided.rs  types.rs
crates/polyrust-strategies/src/crypto_arb/dashboard/: mod.rs  render.rs  updates.rs
crates/polyrust-strategies/src/crypto_arb/domain/: lifecycle.rs  market.rs  mod.rs  position.rs  telemetry.rs
crates/polyrust-strategies/src/crypto_arb/services/: fee_math.rs  market.rs  mod.rs  observability.rs  order.rs  position.rs  pricing.rs
crates/polyrust-strategies/src/crypto_arb/strategy/: mod.rs
crates/polyrust-strategies/src/crypto_arb/strategy/tailend/: entry.rs  exit.rs  mod.rs  order_events.rs
crates/polyrust-strategies/src/crypto_arb/tests/: mod.rs  test_config.rs  test_domain.rs  test_lifecycle.rs  test_markets.rs  test_orders.rs  test_pricing.rs  test_tailend.rs
crates/polyrust-strategies/src/dutch_book/: analyzer.rs  config.rs  dashboard.rs  mod.rs  scanner.rs  strategy.rs  tests.rs  types.rs
docs/brainstorms/: polyrust-trading-framework.md
docs/plans/: 2026-02-16-crypto-arb-refactor.md  20260215-fast-exit-v2.md  arb-strategy-improvements.md  backtesting-framework.md  dutch-book-strategy.md  polyrust-checklist.md  polyrust-framework-implementation.md  strategy-dashboard-views.md  tailend-position-lifecycle-sm.md
docs/plans/completed/: dutch-book-strategy.md
docs/reports/: 2026-02-13-lost-tailend-trades.md  tailend-calibration.md  tailend-performance-deep-research-2026-02-11.md  tailend-stop-loss-bulletproof-2026-02-13.md  tailend-stop-loss-debug-2026-02-13.md
docs/research/: arb-strategy-improvements.md  crypto-arb-reference-price.md  fast-exit-architecture.md  polymarket-modern-strategies.md  polymarket-price-discovery.md  stoploss-aggressiveness.md
examples/: run_backtest.rs  simple_strategy.rs
secrets/: prod.yaml  tunnel-key.yaml
src/: main.rs  verify.rs
tunnel/: Dockerfile  entrypoint.sh  redsocks.conf
