[workspace]
resolver = "2"
members = [
    "crates/polyrust-core",
    "crates/polyrust-market",
    "crates/polyrust-execution",
    "crates/polyrust-store",
    "crates/polyrust-dashboard",
    "crates/polyrust-strategies",
]

[package]
name = "polyrust"
version = "0.1.0"
edition = "2024"

[dependencies]
polyrust-core = { path = "crates/polyrust-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio-stream = "0.1"

[dev-dependencies]
rust_decimal_macros = "1"
