[workspace]
resolver = "2"
members = [
    "crates/polyrust-core",
    "crates/polyrust-market",
    "crates/polyrust-execution",
    "crates/polyrust-store",
    "crates/polyrust-dashboard",
    "crates/polyrust-strategies",
    "crates/polyrust-backtest",
]

[workspace.dependencies]
# Shared versions across all crates
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio-stream = "0.1"
toml = "0.8"
rust_decimal_macros = "1"

polymarket-client-sdk = { version = "0.4", features = [
    "clob", "ws", "rtds", "data", "gamma", "tracing", "heartbeats", "ctf"
] }

# Internal crates
polyrust-core = { path = "crates/polyrust-core" }
polyrust-market = { path = "crates/polyrust-market" }
polyrust-execution = { path = "crates/polyrust-execution" }
polyrust-store = { path = "crates/polyrust-store" }
polyrust-dashboard = { path = "crates/polyrust-dashboard" }
polyrust-strategies = { path = "crates/polyrust-strategies" }
polyrust-backtest = { path = "crates/polyrust-backtest" }

[package]
name = "polyrust"
version = "0.1.0"
edition = "2024"

[dependencies]
polyrust-core.workspace = true
polyrust-market.workspace = true
polyrust-execution.workspace = true
polyrust-store.workspace = true
polyrust-dashboard.workspace = true
polyrust-strategies.workspace = true
polyrust-backtest.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
async-trait.workspace = true
rust_decimal.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
rust_decimal_macros = "1"

[[example]]
name = "simple_strategy"
path = "examples/simple_strategy.rs"

[[example]]
name = "run_backtest"
path = "examples/run_backtest.rs"
