[project]
name = "polyrust-analysis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scipy>=1.12",
    "statsmodels>=0.14",
    "tqdm>=4.66",
    "jupyterlab>=4.0",
    "ipywidgets>=8.0",
    "requests>=2.31",
    "pyarrow>=15.0",
]
