[package]
name = "polyrust-backtest"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal crates
polyrust-core = { workspace = true }
polyrust-store = { workspace = true }
polyrust-execution = { workspace = true }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }

# Backtest-specific dependencies
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
