[package]
name = "polyrust-backtest"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal crates
polyrust-core = { workspace = true }
polyrust-store = { workspace = true }
polyrust-execution = { workspace = true }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }

# Backtest-specific dependencies
reqwest = { version = "0.12", features = ["json"] }
libsql = "0.9"

[dev-dependencies]
rust_decimal_macros = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml = { workspace = true }
