[package]
name = "polyrust-dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
polyrust-core = { path = "../polyrust-core" }
polyrust-store = { path = "../polyrust-store" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
