[package]
name = "polyrust-execution"
version = "0.1.0"
edition = "2024"

[dependencies]
polyrust-core = { path = "../polyrust-core" }
polymarket-client-sdk = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
reqwest = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
rust_decimal_macros = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
