[package]
name = "polyrust-market"
version = "0.1.0"
edition = "2024"

[dependencies]
polyrust-core = { path = "../polyrust-core" }
polymarket-client-sdk = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy-primitives = "1"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
tokio-tungstenite = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
