[package]
name = "polyrust-store"
version = "0.1.0"
edition = "2024"

[dependencies]
polyrust-core = { path = "../polyrust-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
