[package]
name = "polyrust-strategies"
version = "0.1.0"
edition = "2024"

[dependencies]
polyrust-core = { path = "../polyrust-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
